# double-trait

./: CHANGELOG.md  Cargo.toml  README.md  Readme.md  release-plz.toml
.github/workflows/: build.yml  release.yml  test.yml
double-derive/: Cargo.toml
double-derive/src/: double.rs  double_trait.rs  dummies.rs  dummy_impl.rs  lib.rs  trait_impl.rs
double-derive/src/double/: double_trait.rs  dummy_impl.rs  trait_impl.rs
double-trait/: Cargo.toml
double-trait/src/: lib.rs
double-trait/tests/: double.rs  dummies.rs  integration.rs
src/: double_trait.rs  lib.rs  trait_impl.rs
tests/: integration.rs
