[package]
name = "double-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pacman82/double-derive"
authors = ["Markus Klein"]
description = "A procedural macro to derive a mirror of a trait designed to make it easier to implement test doubles."

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["testing", "double"]


# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
