[package]
name = "double-derive"
version = "0.2.9"
edition = "2024"
license = "MIT"
repository = "https://github.com/pacman82/double-trait"
authors = ["Markus Klein"]
description = "Implementations of macros for crate double-trait"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "../README.md"

[lib]
proc-macro = true

[features]
# All extra type support is disabled by default in order to minimize dependencies
default = []
# Enable support for automatically creating dummy implemenations for trait methods which do return `impl Stream`.
stream = []

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
async-trait = "0.1.89"
double-trait = { path = "../double-trait" }
