[package]
name = "double-trait"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pacman82/double-trait"
authors = ["Markus Klein"]
description = "A procedural macro to derive a mirror of a trait designed to make it easier to implement test doubles."

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "../README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["testing", "double"]


# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["rust-patterns"]

[dependencies]
double-derive = { version = "0.2.0", path = "../double-derive" }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
